<?xml version="1.0"?>
<package format3>
  <name>mohamed_ros2</name>
  <version>1.0.0</version>
  <description>Hoverboard Serial Package</description>
  <maintainer email="mohamed@todo.todo">mohamed</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>